# waddles-llm

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile  pyproject.toml  testing.py  waddles.py
backend/knowledge_db/: agents.py  aggregator.py
backend/knowledge_db/parsers/: document_loader.py  website_parser.py
backend/llm-backend/: pyproject.toml
llm-backend/: .dockerignore  Dockerfile  README.md  environment.yml  pyproject.toml  request.py  server_test.py  start_services.sh  testing.py  waddles.py
llm-backend/example/: server_test.py
llm-backend/knowledge_db/: agents.py
llm-backend/knowledge_db/database/: chroma.sqlite3
llm-backend/knowledge_db/llm_config/: aggregator.py  prompt.py  system_message.py
llm-backend/knowledge_db/parsers/: document_loader.py  website_parser.py
llm-backend/sources/docs/: FAQ.txt
llm-backend/sources/websites/: linkmap.pickle
llm-frontend/: README.md  environment.yml  index.html  package-lock.json  pyproject.toml  pyscript.toml
llm-frontend/src/: App.css  App.js
waddles-frontend/: README.md  package.json
waddles-frontend/src/: App.js
