[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = "Finetuning for OCF LLM"
authors = ["Aditya Mangalampalli <aditya.mangalampalli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
langchain = "^0.0.351"
urllib3 = "<2.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
black = "^23.12.0"
chromadb = "^0.4.20"
unstructured = {extras = ["pdf"], version = "^0.11.5"}
pypdf = "^3.17.3"
langserve = {extras = ["server"], version = "^0.0.37"}
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
pydantic = "1.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
