[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = "Backend for OCF LLM"
authors = ["Aditya Mangalampalli <aditya.mangalampalli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
langchain = "^0.0.351"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
